--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-MBPL_DRIVERS_R35_ENG4-usb-src
+MBPL_DRIVERS_R44_ENG4-usb-src
 The source code under src folder is provided by sierra wireless.
 clone this repo to packages folder in openwrt build system and select it
-under kernel package - wwan suppor to use this driver.
+under kernel package - wwan support to use this driver.
